# Zenyth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Core/: CMakeLists.txt  DownloadDX.cmake
Core/include/: Application.hpp  Buffers.hpp  Buffers.inl  Camera.hpp  Concepts.hpp  Core.hpp  DescriptorHeap.hpp  IRenderer.hpp  ImGuiLayer.hpp  Math.hpp  StepTimer.h  StepTimer.hpp  Texture.hpp  Timer.hpp  Transform.hpp  Vertex.hpp  Win32Application.hpp  Window.hpp  pch.hpp
Core/include/Assets/: ObjLoader.hpp  ObjParser.hpp
Core/include/Data/: Light.hpp  MaterialDesc.hpp  Mesh.hpp  Submesh.hpp  Transform.hpp  Vertex.hpp
Core/include/Math/: Utils.hpp
Core/include/Profiling/: GpuTimer.hpp  Profiler.hpp
Core/include/Renderer/: Buffers.hpp  CommandAllocatorPool.hpp  CommandBatch.hpp  CommandManager.hpp  CommandQueue.hpp  DepthStencilBuffer.hpp  DescriptorHeap.hpp  GpuResource.hpp  Material.hpp  MeshRenderer.hpp  Pipeline.hpp  PixelBuffer.hpp  RenderTarget.hpp  Renderer.hpp  Shader.hpp  SubmeshRenderer.hpp  SwapChain.hpp  Texture.hpp  UploadAllocator.hpp
Core/include/Renderer/Model/: Mesh.hpp  Vertex.hpp
Core/include/engine/: Transform.hpp
Core/include/math/: constants.hpp  matrix.hpp  utils.hpp  vector.hpp
Core/src/: Application.cpp  Buffers.cpp  Camera.cpp  DescriptorHeap.cpp  ImGuiLayer.cpp  Texture.cpp  Timer.cpp  Transform.cpp  Win32Application.cpp  Window.cpp
Core/src/Assets/: ObjLoader.cpp  ObjParser.cpp
Core/src/Data/: Mesh.cpp  Submesh.cpp  Transform.cpp
Core/src/Profiling/: GpuTimer.cpp  Profiler.cpp
Core/src/Renderer/: Buffers.cpp  CommandAllocatorPool.cpp  CommandBatch.cpp  CommandManager.cpp  CommandQueue.cpp  DepthStencilBuffer.cpp  DescriptorHeap.cpp  GpuResource.cpp  Material.cpp  MeshRenderer.cpp  Pipeline.cpp  PixelBuffer.cpp  RenderTarget.cpp  Renderer.cpp  Shader.cpp  SubmeshRenderer.cpp  SwapChain.cpp  Texture.cpp  UploadAllocator.cpp
Core/src/Renderer/Model/: Mesh.cpp
Core/src/engine/: Transform.cpp
Core/src/math/: matrix.cpp  vector.cpp
ModelGallery/: CMakeLists.txt  imgui.ini
ModelGallery/include/: ModelGallery.hpp
ModelGallery/resources/models/SM_Door/: SM_Door.mtl
ModelGallery/resources/models/plane/: plane.mtl
ModelGallery/resources/models/sponza/: sponza.mtl
ModelGallery/resources/shaders/: Common.hlsli  GenerateMipsCS.hlsl  Lighting.hlsli  basic_ps.hlsl  basic_vs.hlsl
ModelGallery/resources/textures/: terrain_n.dds
ModelGallery/src/: ModelGallery.cpp  main.cpp
Renderer/: CMakeLists.txt
Renderer/include/: D3D12Renderer.hpp
Renderer/src/: D3D12Renderer.cpp
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/include/: Block.hpp  Chunk.hpp  Minicraft.hpp  SandboxApp.hpp  Vertex.hpp  World.hpp
Sandbox/resources/shaders/: basic_ps.hlsl  basic_vs.hlsl  present_ps.hlsl  present_vs.hlsl
Sandbox/resources/textures/: terrain.dds
Sandbox/src/: Block.cpp  Chunk.cpp  Minicraft.cpp  SandboxApp.cpp  World.cpp  main.cpp
include/: Application.hpp  Buffers.hpp  Camera.hpp  Core.hpp  Texture.hpp  Vertex.hpp  Window.hpp  stdafx.h
include/engine/: Transform.hpp
resources/shaders/: basic_ps.hlsl  basic_vs.hlsl
src/: Application.cpp  Buffers.cpp  Camera.cpp  Texture.cpp  Window.cpp  main.cpp
